--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ghostman</title>
+    <title>Postman</title>
   </head>
   <body>
     <div id="_root_"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/App.js"></script>
   </body>
 </html>
